# android-n

./: .gitignore  README.md  make-standalone.sh
afirst/: AndroidManifest.xml  CMakeLists.txt  Makefile  afirst.vcxproj  afirst.vcxproj.filters  android.cmake  build.xml  genfont.sh  hellow.c  local.properties  makevs.bat  mkresource.c
afirst/font/: genfont.py
afirst/jni/: Android.mk  app-android.c  blend.h  cart.c  cart.h  font.c  game.c  game.h  leika.c  leika.h  main.c  old.c  pumpkin.c  pumpkin.h  resources.c  resources.h  sound-android.c  sound-linux.c  sound-osx.c  sound-win32.c  sound.h  spray.c  spray.h  worm.c  worm.h
afirst/med/: bg.xcf  button_quit.xcf  cart.xcf  cart_mask.xcf  leika.xcf  leika_mask.xcf  pumpkin_green.xcf  pumpkin_mask.xcf  pumpkin_red.xcf  pumpkin_spoiled.xcf  pumpkin_yellow.xcf  worm1.xcf  worm1_mask.xcf  worm2.xcf  worm2_mask.xcf  worm3.xcf  worm3_mask.xcf
ainput/: AndroidManifest.xml  build.xml
ainput/jni/: Android.mk  app-android.c
ainput/res/values/: strings.xml
aplay/: AndroidManifest.xml  build.xml  local.properties
aplay/jni/: Android.mk  Application.mk  app-android.c  audio.c
aplay/res/values/: strings.xml
arch-linux/SLES/: OpenSLES.h
arch-linux/android/: log.h  looper.h
arch-osx/: jni.h
arch-osx/GLES/: gl.h
arch-osx/SLES/: OpenSLES_Android.h
arch-win32/: jni.h
arch-win32/GLES/: gl.h
arch-win32/SLES/: OpenSLES_Android.h
bmpconv/: Makefile  bmpconv.c  bmpconv.vcxproj  bmpconv.vcxproj.filters
common/: Android.mk  app-android.c  app-linux.c  app-osx.c  app-win32.c  app.c  app.h  audio.c  audio.h  compat.h  log.h  pic.c  pic.h  test.c
frustrum/: Makefile  frustrum.c  frustrum.sln  frustrum.vcxproj  pictest.c  pixmap.c
geomtest/: geomtest.c  geomtest.vcxproj
molecules/: AndroidManifest.xml  CMakeLists.txt  gen-pics.sh
molecules/jni/: checker.c  font.h  game.c  game.h  hidrogen.c  hidrogen.h  main.c  molecule.c  molecule.h  resources.c  resources.h  sound-osx.c  sound-win32.c  spray.c
molecules/med/: bg.xcf  bond1.xcf  bond2.xcf  button_test.xcf  carbon.xcf  courier.xcf  font.xcf  hidrogen.xcf  hidrogen_mask.xcf  spray.xcf  spray_mask.xcf
molecules/res/values/: strings.xml
